SERVER-54755 Wait for majority write concern using repl_client_info